--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php" : "~5.6|~7.0",
         "illuminate/support": "~5.0",
-        "shift31/laravel-elasticsearch": "~1.0|dev-master"
+        "shift31/laravel-elasticsearch": "~2.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "5.3.*",
